--- a/desktop/odsc.desktop
+++ b/desktop/odsc.desktop
@@ -3,8 +3,9 @@ Version=1.0
 Type=Application
 Name=OneDrive Sync Client
 Comment=Sync files with Microsoft OneDrive
+Icon=odsc
 Exec=odsc-gui
-Icon=folder-cloud
 Terminal=false
 Categories=Network;FileTransfer;
-Keywords=onedrive;sync;cloud;storage;
+Keywords=onedrive;cloud;sync;backup;storage;
+StartupNotify=true
