Major GUI overhaul: Menu bar, live log panel, and enhanced authentication
- Replace toolbar with professional menu bar with dropdown menus
- Add Authentication menu with conditional Login/Logout items
- Add Settings menu with enhanced Preferences dialog
- Add Help menu with About, License, and log viewer

Authentication improvements:
- Login/Logout menu items enabled based on auth state
- Simplified Authentication Info dialog (read-only)
- Added user info display (name, email) with User.Read scope
- Added last login timestamp calculation
- Changed 'Client ID' labels to 'Application ID' in GUI

Settings improvements:
- Added Log Level dropdown (DEBUG/INFO/WARNING/ERROR/CRITICAL)
- Log level changes now apply immediately without restart
- Added daemon restart button for sync directory/interval changes
- Improved user feedback with confirmation dialogs
- Fixed dropdown behavior using ComboBoxText

Log panel features:
- Converted from modal dialog to toggleable split-screen panel
- Added live log tailing (updates every 500ms)
- Non-blocking UI - can interact while viewing logs
- Resizable paned layout (70/30 split)
- Auto-scroll option with manual refresh button
- Shows both GUI and daemon logs in real-time

Installation fixes:
- Fixed duplicate desktop entry creation in install.sh
- Now only creates com.github.odsc.desktop (prevents duplicate icons)
- Improved icon scaling and visibility

Technical changes:
- Migrated to Gtk.Application pattern for proper window management
- Added proper timer cleanup for log tailing
- Implemented subprocess-based daemon restart functionality
- Enhanced error handling throughout

--- a/desktop/odsc.desktop
+++ b/desktop/odsc.desktop
@@ -9,3 +9,4 @@ Terminal=false
 Categories=Network;FileTransfer;
 Keywords=onedrive;cloud;sync;backup;storage;
 StartupNotify=true
+StartupWMClass=com.github.odsc
