Add clarifying comments to requirements.txt
Explain that install.sh uses system packages (apt-get/dnf) instead of pip,
and that this file serves as documentation and for alternative installation
methods (venv, CI/CD, non-Debian systems).

Clarifies the relationship between requirements.txt, setup.py, and install.sh
to prevent confusion for contributors.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
+# Python Package Dependencies for ODSC
+#
+# NOTE: The install.sh script uses SYSTEM PACKAGES (apt-get/dnf) instead of
+# pip to install these dependencies for better system integration and to avoid
+# externally-managed-environment issues on modern Linux distributions.
+#
+# This file is provided for:
+# - Documentation of required packages
+# - Alternative installation method: pip install -r requirements.txt
+# - Development in virtual environments
+# - CI/CD pipelines
+#
+# Dependencies are also listed in setup.py install_requires section.
+
 # OneDrive API (using Microsoft Graph directly)
 requests>=2.31.0
 
