Fix MANIFEST.in: remove deleted files, add icon, improve organization
Changes:
- Remove: CONTRIBUTING.md (deleted in optimization)
- Remove: config.example.json (deleted in optimization)
- Remove: recursive-include src *.py (redundant, setuptools includes Python files)
- Add: recursive-include desktop *.svg (include icon file)
- Add: explanatory header comment
- Organize entries by category with comments

This file is only used for PyPI/sdist distribution, not by install.sh.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,26 @@
+# MANIFEST.in - Defines which files to include in source distributions
+#
+# NOTE: This is only used when building packages for distribution (e.g., PyPI).
+# The install.sh script does not use this file.
+#
+# Used by: python setup.py sdist, twine upload, etc.
+
+# Documentation
 include README.md
 include LICENSE
-include CONTRIBUTING.md
 include QUICKSTART.md
 include ARCHITECTURE.md
+
+# Configuration and installation
 include requirements.txt
-include config.example.json
 include install.sh
-recursive-include systemd *.service
+
+# Desktop integration files
 recursive-include desktop *.desktop
-recursive-include src *.py
+recursive-include desktop *.svg
+
+# Systemd service files
+recursive-include systemd *.service
+
+# Tests
 recursive-include tests *.py
