Add Force Sync Now feature to Settings menu
- Added force sync signal file mechanism for GUI-daemon communication
- Config: Added FORCE_SYNC_FILE constant and force_sync_path property
- Daemon: Added _check_force_sync_signal() method to detect and process sync requests
- GUI: Added 'Force Sync Now' menu item under Settings menu
- GUI: Added service status notification and improved user experience
- Added refresh-desktop-entry.sh script for GNOME menu updates
- Updated documentation and installation scripts

--- a/desktop/odsc.desktop
+++ b/desktop/odsc.desktop
@@ -2,11 +2,14 @@
 Version=1.0
 Type=Application
 Name=OneDrive Sync Client
+GenericName=Cloud Storage Sync
 Comment=Sync files with Microsoft OneDrive
 Icon=odsc
 Exec=odsc-gui
+TryExec=odsc-gui
 Terminal=false
 Categories=Network;FileTransfer;
-Keywords=onedrive;cloud;sync;backup;storage;
+Keywords=onedrive;cloud;sync;backup;storage;microsoft;
 StartupNotify=true
-StartupWMClass=com.github.odsc
+StartupWMClass=OneDrive Sync Client
+X-GNOME-UsesNotifications=true
