--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,6 @@ send2trash>=1.8.0
 cryptography>=41.0.0
 keyring>=24.0.0
 certifi>=2023.7.22
+
+# Retry logic with exponential backoff and jitter
+tenacity>=8.2.0
